2010-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_EMACS_INFO): Discard GNU Emacs 21 compatibility.

2010-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.19-pre).  Update merge
	version to 2.1.18.

2010-03-14  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.18 released.

	* configure.ac: Bump version.

2009-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.18-pre).  Update merge
	version to 2.1.17.

2009-11-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.17 released.

	* configure.ac: Bump version.

2009-09-24  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_EMACS_INFO) Add imap support.

	* Makefile.in: Add tramp-imap.el.

2009-06-29  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.17-pre).  Update merge
	version to 2.1.16.

2009-06-22  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.16 released.

	* configure.ac: Bump version.

2009-06-15  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_EMACS_INFO): Make TRAMP_EMACS_VERSION_CHECK fit
	for SXEmacs 22.

2009-02-06  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.16-pre).  Update merge
	version to 2.1.15.

	* Makefile.in: Add tramp-gvfs.el.

	* aclocal.m4 (AC_EMACS_INFO): Add gvfs support.

2009-02-01  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.15 released.

	* configure.ac: Bump version.

2008-08-22  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.15-pre).  Update merge
	version to 2.1.14.

2008-07-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.14 released.

	* configure.ac: Bump version.

	* aclocal.m4 (AC_EMACS_LISP): Move change to ...
	(AC_CONTRIB_FILES): Require 'timer-funcs in case of XEmacs.

2008-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_EMACS_LISP): Require 'timer-funcs in case of