@@ -1,0 +1,9 @@
+((nil . ((tab-width . 8)
+         (fill-column . 70)))
+ (change-log-mode . ((add-log-time-zone-rule . t)
+		     (fill-column . 74)
+		     (bug-reference-url-format . "http://debbugs.gnu.org/%s")
+		     (mode . bug-reference)))
+ (emacs-lisp-mode . ((bug-reference-url-format . "http://debbugs.gnu.org/%s")
+		     (mode . bug-reference-prog)))
+ (diff-mode . ((mode . whitespace))))
